Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
 <h3>
 <a name="create-a-testrunner-mb-file" class="anchor" href="#create-a-testrunner-mb-file"><span class="octicon octicon-link"></span></a>Create a testrunner .mb file</h3>
 
-<p>The basic testrunner:
-    Declare Sub Main</p>
+<p>The basic testrunner:</p>
 
-<pre><code>Sub Main
+<pre><code>Declare Sub Main
+
+Sub Main
 Print "-----------"
 Print "new testrun." + Time(24)
 Print "-----------"
