--- a/index.html
+++ b/index.html
@@ -134,6 +134,20 @@ new testrun.22:09:07
 -----------
 Test: TestThatStringIsTrimmed has passed.
 </code></pre>
+
+<h2>
+<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
+
+<p>The following assertions are currently available in the <code>MapBasicUnit.mb</code>:</p>
+
+<pre><code>(Call) AssertTrue(Byval testName As String, ByVal actual As Logical)
+(Call) AssertStringEqual(Byval testName As String, Byval expected As String, Byval actual As String)
+(Call) AssertIntegerEqual(Byval testName As String, Byval expected As Integer, Byval actual As Integer)
+</code></pre>
+
+<p><code>Assertions</code> are always takes a <code>testName</code> argument for identification of the assertion. It is strongly recommended that the <code>testName</code> is unique. </p>
+
+<p>Currently test runs are reported through the MapInfo <code>message</code> window, but this may be configurable in the future to enable writing test failures and passes to a file to allow integration with a continues integration system.</p>
         </section>
 
         <footer>
