--- a/index.html
+++ b/index.html
@@ -143,9 +143,28 @@ Test: TestThatStringIsTrimmed has passed.
 <pre><code>(Call) AssertTrue(Byval testName As String, ByVal actual As Logical)
 (Call) AssertStringEqual(Byval testName As String, Byval expected As String, Byval actual As String)
 (Call) AssertIntegerEqual(Byval testName As String, Byval expected As Integer, Byval actual As Integer)
+(Call) AssertFloatEqual(Byval testName As String, Byval expected As Float, Byval actual As Float, Byval within As Float)
 </code></pre>
 
 <p><code>Assertions</code> are always takes a <code>testName</code> argument for identification of the assertion. It is strongly recommended that the <code>testName</code> is unique. </p>
+
+<p><code>AssertFloatEqual</code> takes a <code>within</code> argument so that inaccuracies in the <code>Float</code> calculus can be accounted for.</p>
+
+<p>Example:</p>
+
+<p><strong>Fails</strong></p>
+
+<pre><code>Dim almostZero as Float
+almostZero = (1.00000000000001 - 1) - 0.00000000000001
+Call AssertFloatEqual("AssertFloatEqualFailsWhenRoundingIsTested", 0.0, almostZero, 0.0)
+</code></pre>
+
+<p><strong>Passes</strong></p>
+
+<pre><code>Dim almostZero as Float
+almostZero = (1.00000000000001 - 1) - 0.00000000000001
+Call AssertFloatEqual("AssertFloatEqualPassesWhenWithinRoundingNegativeIsTested", 0.0, almostZero, 0.000001)
+</code></pre>
 
 <p>Currently test runs are reported through the MapInfo <code>message</code> window, but this may be configurable in the future to enable writing test failures and passes to a file to allow integration with a continues integration system.</p>
         </section>
