Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ Test: TestThatStringIsTrimmed has passed.
 <pre><code>(Call) AssertTrue(Byval testName As String, ByVal actual As Logical)
 (Call) AssertStringEqual(Byval testName As String, Byval expected As String, Byval actual As String)
 (Call) AssertIntegerEqual(Byval testName As String, Byval expected As Integer, Byval actual As Integer)
+(Call) AssertSmallIntEqual(Byval testName As String, Byval expected As SmallInt, Byval actual As SmallInt)
 (Call) AssertFloatEqual(Byval testName As String, Byval expected As Float, Byval actual As Float, Byval within As Float)
 </code></pre>
 
